# aero-ros-pkg-extra

./: .gitignore  README.md
aero_maps/: CMakeLists.txt  package.xml
aero_maps/config/: shelf_2.yaml
aero_maps/launch/: dummy_map.launch  room_map.launch  shop_model_publisher.launch
aero_maps/maps/: room.yaml
aero_maps/models/: blue_person.dae  coffee.dae  container_part0.dae  container_part1.dae  marker.dae  onigiri.dae  sandwich.dae  shelf.dae  shelf_box_scan.yaml
aero_maps/msg/: IndexedPoseStamped.msg
aero_maps/scripts/: bento_model_publisher.py  carry_model_publisher.py  coffee_model_publisher.py  container_model_publisher.py  onigiri_model_publisher.py  person_model_publisher.py  person_position_converter.py  sandwich_model_publisher.py  shelf_board_publisher.py  shelf_box_scan.py  shelf_model_publisher.py
aero_maps/src/aero_maps/: __init__.py  movable_model_publisher.py
aero_nonofficial_api/: CMakeLists.txt  package.xml
aero_nonofficial_api/gazebo_models/diybox/: model.sdf
aero_nonofficial_api/gazebo_models/fcsc_shelf/: model.sdf
aero_nonofficial_api/include/aero_nonofficial_api/: AeroMotionPlanningInterface.hh  NonPrehensileGraspInterface.hh  utils.hh  utils_gazebo.hh  utils_poses.hh  utils_recognition.hh
aero_nonofficial_api/launch/: bento_example.launch
aero_nonofficial_api/lib/: AeroMotionPlanningInterface.cc  NonPrehensileGraspInterface.cc
aero_nonofficial_api/models/: bento.dae
aero_nonofficial_api/src/: bento_example.cc
aero_object_detector/: CMakeLists.txt  README.md  package.xml  setup.py
aero_object_detector/cfg/: Object3DProjector.cfg  ObjectDetector.cfg
aero_object_detector/include/aero_object_detector/: object_3d_projector.h
aero_object_detector/include/aero_object_detector/dummy/: object_3d_projector.h
aero_object_detector/launch/: fcn_object_detector.launch  hand_detector.launch
aero_object_detector/plugins/nodelet/: libaero_object_detector.xml
aero_object_detector/scripts/: install_model.py
aero_object_detector/scripts/chainer/: dummy_object_detector.py  egohands2kitti.py  object_detector_chainer.py  train_sample.py  train_utils.py
aero_object_detector/src/: object_3d_projector.cpp
aero_object_detector/src/dummy/: object_3d_projector.cpp
aero_recognition_msgs/: CMakeLists.txt  package.xml
aero_recognition_msgs/msg/: LabeledPose.msg  LabeledPoseArray.msg
aero_recognition_msgs/srv/: SetTemplatePose.srv
aero_sensor_plate/: CMakeLists.txt  package.xml
aero_sensor_plate/launch/: sensor_plate_kinect.launch
aero_sensor_plate/src/control_utils/: dynamic_tfstamped.cc  sensordirection_filter.cc  sensordirectioncontrol_onmobilebase.cc
aero_sensor_plate/src/controller/: sensor_plate_controller.py  sensor_plate_controller_dummy.py
aero_sensor_plate/src/frame_publisher/: SensorPlateFramePublisher.cc
aero_sensors_private/: CMakeLists.txt  package.xml
aero_sensors_private/kinect/dynamic_kinect_controller/: DynamicKinectFramePublisher.cc  dynamic_kinect_dummy_controller.py
aero_sensors_private/kinect/launch/: dynamic_kinect.launch  person_detection2_onbot.launch
aero_sensors_private/kinect/src/: LookAtKinect.cc  LookAtKinect2.cc  RotateKinectAddon.cc
aero_ssd_recognition/: CMakeLists.txt  README.md  package.xml  setup.py  setup.sh
aero_ssd_recognition/cfg/: Object3DProjector.cfg  ObjectDetector.cfg
aero_ssd_recognition/include/aero_ssd_recognition/: object_3d_projector.h
aero_ssd_recognition/include/aero_ssd_recognition/dummy/: object_3d_projector.h
aero_ssd_recognition/launch/: recog_aero.launch
aero_ssd_recognition/models/chainer/: model_list.yaml
aero_ssd_recognition/models/chainer/facepose_detector/: face_class_list.txt
aero_ssd_recognition/plugins/nodelet/: libaero_ssd_recognition.xml
aero_ssd_recognition/scripts/: install_model.py
aero_ssd_recognition/scripts/chainer/: detection_dataset.py  dummy_object_detector.py  infer.py  object_detector_chainer.py  train.py
aero_ssd_recognition/src/: object_3d_projector.cpp
aero_ssd_recognition/src/dummy/: object_3d_projector.cpp
