<?xml version="1.0"?>
<package format="2">
  <name>aero_nonofficial_api</name>
  <version>2.1.0</version>
  <description>The aero_nonofficial_api package</description>

  <maintainer email="ssb@todo.todo">t-kasas</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aero_std</build_depend>

  <export/>
</package>
