<?xml version="1.0"?>
<package>
  <name>aero_recognition_msgs</name>
  <version>0.0.0</version>
  <description>The aero_recognition_msgs package</description>

  <maintainer email="mizohana@jsk.imi.i.u-tokyo.ac.jp">mizmizo</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
