<package>
  <name>aero_ssd_recognition</name>
  <version>0.0.0</version>
  <description>
    aero_ssd_recognition
  </description>

  <maintainer email="mizohana@jsk.imi.i.u-tokyo.ac.jp">Hiroto Mizohana</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>aero_recognition_msgs</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>compressed_image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>jsk_data</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>aero_recognition_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>yaml-cpp</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/libaero_ssd_recognition.xml" />
  </export>

</package>
